# rag-companion

./: .dockerignore  .gitignore  Dockerfile  LICENSE  pyproject.toml  template.env
chroma_db/data/: chroma.sqlite3
src/: lifespan.py  main.py
src/api/: api.py  routes.py
src/chromadb/: __init__.py  client.py  store.py
src/config/: formatter.py  settings.py
src/llm/: __init__.py  base.py  chatgpt.py  docker.py  ollama.py
src/models/: chat.py
src/services/: document_processor.py
